examples/after-map-route-b/cf.yaml
apiVersion: v1
items:
- apiVersion: apps.cloudfoundry.org/v1alpha1
  kind: RouteBulkSync
  metadata:
    annotations:
      kapp.k14s.io/change-rule.istio-sidecar-injector: upsert after upserting cf-for-k8s.cloudfoundry.org/istio-sidecar-injector
      kapp.k14s.io/identity: v1;cf-workloads/apps.cloudfoundry.org/RouteBulkSync/route-bulk-sync;apps.cloudfoundry.org/v1alpha1
      kapp.k14s.io/original: '{"apiVersion":"apps.cloudfoundry.org/v1alpha1","kind":"RouteBulkSync","metadata":{"annotations":{"kapp.k14s.io/change-rule.istio-sidecar-injector":"upsert
        after upserting cf-for-k8s.cloudfoundry.org/istio-sidecar-injector"},"labels":{"kapp.k14s.io/app":"1590478913596823804","kapp.k14s.io/association":"v1.b390afcdb9a327cf2015c669b22131f2","shalm.wonderix.github.com/app":"cf-for-k8s","shalm.wonderix.github.com/version":"0.0.0"},"name":"route-bulk-sync","namespace":"cf-workloads"},"spec":{"selector":{"matchLabels":{"cloudfoundry.org/route-bulk-sync":"true"}},"template":{"metadata":{"labels":{"cloudfoundry.org/route-bulk-sync":"true"}}}}}'
      kapp.k14s.io/original-diff: |
        []
      kapp.k14s.io/original-diff-full: ""
      kapp.k14s.io/original-diff-md5: 58e0494c51d30eb3494f7c9198986bb9
    creationTimestamp: "2020-05-26T07:42:29Z"
    generation: 1
    labels:
      kapp.k14s.io/app: "1590478913596823804"
      kapp.k14s.io/association: v1.b390afcdb9a327cf2015c669b22131f2
      shalm.wonderix.github.com/app: cf-for-k8s
      shalm.wonderix.github.com/version: 0.0.0
    name: route-bulk-sync
    namespace: cf-workloads
    resourceVersion: "3801629"
    selfLink: /apis/apps.cloudfoundry.org/v1alpha1/namespaces/cf-workloads/routebulksyncs/route-bulk-sync
    uid: 9955be39-4f2a-4321-9b99-cdadb275266e
  spec:
    selector:
      matchLabels:
        cloudfoundry.org/route-bulk-sync: "true"
    template:
      metadata:
        labels:
          cloudfoundry.org/route-bulk-sync: "true"
  status:
    observedGeneration: 1
- apiVersion: networking.cloudfoundry.org/v1alpha1
  kind: Route
  metadata:
    creationTimestamp: "2020-05-26T12:41:30Z"
    generation: 2
    labels:
      app.kubernetes.io/component: cf-networking
      app.kubernetes.io/managed-by: cloudfoundry
      app.kubernetes.io/name: 05406cca-bc8a-4e98-9953-ee9b837c6371
      app.kubernetes.io/part-of: cloudfoundry
      app.kubernetes.io/version: 0.0.0
      cloudfoundry.org/domain_guid: 44ea38d7-3cff-436a-ba80-191be00f2b12
      cloudfoundry.org/org_guid: 04a73274-9280-4b99-9abc-e44e3ff4a74e
      cloudfoundry.org/route_guid: 05406cca-bc8a-4e98-9953-ee9b837c6371
      cloudfoundry.org/space_guid: 8d18b884-729c-4239-9b88-39c4964a3f86
    name: 05406cca-bc8a-4e98-9953-ee9b837c6371
    namespace: cf-workloads
    resourceVersion: "3900136"
    selfLink: /apis/networking.cloudfoundry.org/v1alpha1/namespaces/cf-workloads/routes/05406cca-bc8a-4e98-9953-ee9b837c6371
    uid: 3cae978a-e8ef-4cd3-b353-e6e937d96745
  spec:
    destinations:
    - app:
        guid: eb1534db-8765-430d-adfe-77fd1a8e45a9
        process:
          type: web
      guid: ef9c974d-adfd-4552-8fcd-19e17f84d8dc
      port: 8080
      selector:
        matchLabels:
          cloudfoundry.org/app_guid: eb1534db-8765-430d-adfe-77fd1a8e45a9
          cloudfoundry.org/process_type: web
    domain:
      internal: false
      name: cf.c21s-1.c21s-dev.shoot.canary.k8s-hana.ondemand.com
    host: test-app-a
    path: ""
    url: test-app-a.cf.c21s-1.c21s-dev.shoot.canary.k8s-hana.ondemand.com
- apiVersion: networking.cloudfoundry.org/v1alpha1
  kind: Route
  metadata:
    creationTimestamp: "2020-05-26T12:42:33Z"
    generation: 2
    labels:
      app.kubernetes.io/component: cf-networking
      app.kubernetes.io/managed-by: cloudfoundry
      app.kubernetes.io/name: 4d84be14-8bf6-4c17-862a-4ffa06025dc3
      app.kubernetes.io/part-of: cloudfoundry
      app.kubernetes.io/version: 0.0.0
      cloudfoundry.org/domain_guid: 44ea38d7-3cff-436a-ba80-191be00f2b12
      cloudfoundry.org/org_guid: d0af41ec-272c-4bdb-a502-bf041c07bf93
      cloudfoundry.org/route_guid: 4d84be14-8bf6-4c17-862a-4ffa06025dc3
      cloudfoundry.org/space_guid: 0c35ac46-2fee-4cdb-b93e-98004d05019e
    name: 4d84be14-8bf6-4c17-862a-4ffa06025dc3
    namespace: cf-workloads
    resourceVersion: "3900539"
    selfLink: /apis/networking.cloudfoundry.org/v1alpha1/namespaces/cf-workloads/routes/4d84be14-8bf6-4c17-862a-4ffa06025dc3
    uid: ff7a4f33-d3a5-4261-926c-f8b6d397b533
  spec:
    destinations:
    - app:
        guid: bc0a6140-06f0-409b-80c7-62b8c2f839d9
        process:
          type: web
      guid: c0f89a1f-6dad-4e1f-8283-29292ab6f8a8
      port: 8080
      selector:
        matchLabels:
          cloudfoundry.org/app_guid: bc0a6140-06f0-409b-80c7-62b8c2f839d9
          cloudfoundry.org/process_type: web
    domain:
      internal: false
      name: cf.c21s-1.c21s-dev.shoot.canary.k8s-hana.ondemand.com
    host: test-app-b
    path: ""
    url: test-app-b.cf.c21s-1.c21s-dev.shoot.canary.k8s-hana.ondemand.com
- apiVersion: networking.cloudfoundry.org/v1alpha1
  kind: Route
  metadata:
    creationTimestamp: "2020-05-26T12:43:29Z"
    generation: 2
    labels:
      app.kubernetes.io/component: cf-networking
      app.kubernetes.io/managed-by: cloudfoundry
      app.kubernetes.io/name: a612eb1b-51fa-4596-87d0-6b22cffc7e64
      app.kubernetes.io/part-of: cloudfoundry
      app.kubernetes.io/version: 0.0.0
      cloudfoundry.org/domain_guid: 44ea38d7-3cff-436a-ba80-191be00f2b12
      cloudfoundry.org/org_guid: d0af41ec-272c-4bdb-a502-bf041c07bf93
      cloudfoundry.org/route_guid: a612eb1b-51fa-4596-87d0-6b22cffc7e64
      cloudfoundry.org/space_guid: 0c35ac46-2fee-4cdb-b93e-98004d05019e
    name: a612eb1b-51fa-4596-87d0-6b22cffc7e64
    namespace: cf-workloads
    resourceVersion: "3900902"
    selfLink: /apis/networking.cloudfoundry.org/v1alpha1/namespaces/cf-workloads/routes/a612eb1b-51fa-4596-87d0-6b22cffc7e64
    uid: 86dfc696-e720-4829-86de-b052a2f20375
  spec:
    destinations:
    - app:
        guid: bc0a6140-06f0-409b-80c7-62b8c2f839d9
        process:
          type: web
      guid: fc62cbf4-a70e-4ac5-9c72-ba7e9e54e16b
      port: 8080
      selector:
        matchLabels:
          cloudfoundry.org/app_guid: bc0a6140-06f0-409b-80c7-62b8c2f839d9
          cloudfoundry.org/process_type: web
    domain:
      internal: false
      name: cf.c21s-1.c21s-dev.shoot.canary.k8s-hana.ondemand.com
    host: test-app-b1
    path: ""
    url: test-app-b1.cf.c21s-1.c21s-dev.shoot.canary.k8s-hana.ondemand.com
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
